objects/agf__ADM_User_Product_Tag__c.object
<CustomObject>
    <fields>
        <fullName>agf__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipLabel>User Product Tags</relationshipLabel>
        <relationshipName>User_Product_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Product_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Product Tag</label>
    <nameField>
        <label>User Product Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Product Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>